commit per Giuglio <3

--- a/Jama/src/main/webapp/resources/sections/pannello2.xhtml
+++ b/Jama/src/main/webapp/resources/sections/pannello2.xhtml
@@ -5,14 +5,14 @@
     <div style="position: relative; height: 140px">
         <h:panelGrid columns="3" columnClasses="wfcol1,wfcol2,wfcol3">
             <h:outputText value="Notes:" />
-            <h:inputTextarea cols="20" rows="4" id="notes" value="#{agreementPresentationBean.notes}" label="Notes" required="false" />
+            <h:inputTextarea cols="20" rows="4" id="notes" value="#{agreementWizardPCB.agreement.note}" label="Notes" required="false" />
             <rich:message for="notes" />
         </h:panelGrid>
         <div class="navPanel" style="width: 100%;">
             <a4j:commandButton value="&lt;&lt;Previous" style="float:left">
                 <rich:toggleControl targetItem="@prev" event="click" />
             </a4j:commandButton>
-            <h:commandButton value="Save" style="float:right" action="done">
+            <h:commandButton value="Save" style="float:right" action="#{agreementWizardPCB.save()}">
             </h:commandButton>
         </div>
  
