--- a/Jama/src/main/webapp/resources/sections/pannello1.xhtml
+++ b/Jama/src/main/webapp/resources/sections/pannello1.xhtml
@@ -4,12 +4,12 @@
  
     <div style="position: relative; height: 140px">
         <h:panelGrid rowClasses="s1row" columns="3" columnClasses="wfcol1,wfcol2,wfcol3">
-            <h:outputText value="First Name:" />
-            <h:inputText id="fn" value="#{agreementPresentationBean.title}" label="Titolo" required="true" />
+            <h:outputText value="Titolo:" />
+            <h:inputText id="fn" value="#{agreementWizardPCB.agreement.title}" label="Titolo" required="true" />
             <rich:message for="fn" />
  
-            <h:outputText value="Last Name:" />
-            <h:inputText id="ln" value="#{agreementPresentationBean.type}" label="Type" required="true" />
+            <h:outputText value="Referente:" />
+            <h:inputText id="ln" value="#{agreementWizardPCB.agreement.contactPerson}" label="Referente" required="true" />
             <rich:message for="ln" />
         </h:panelGrid>
         <div class="navPanel" style="width: 100%;">
