--- a/Jama/src/main/webapp/done.xhtml
+++ b/Jama/src/main/webapp/done.xhtml
@@ -6,6 +6,6 @@
 
 <h:head></h:head> 
 <h:body>
-	<h1>Convenzione dal titolo #{agreementPresentationBean.title} creata! E' di tipo #{agreementPresentationBean.type}.</h1>
+	<h1>Convenzione dal titolo ... creata! E' di tipo ...</h1>
 </h:body> 
 </html>
