--- a/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
@@ -30,7 +30,7 @@
 	    <h:panelGrid width="100%" columns="2" columnClasses="col1,col2">
 	        <rich:panel styleClass="wizard">
 	            <f:facet name="header">
-	                <h:outputText value="Using rich:togglePanel for Wizard-like behaviour" />
+	                <h:outputText value="#{msgs.newAgr}" />
 	            </f:facet>
 	            <h:form>
 	                <rich:togglePanel switchType="ajax">
