--- a/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
@@ -6,8 +6,7 @@
 	    <br />
 	    <h:outputStylesheet>
 	        .col1 { vertical-align:top; }
-	        .col2 { vertical-align:top; width:450px; }
-	        .wizard { width:400px; }
+	        .wizard { }
 	        .wform td { vertical-align:top; }
 	        .wfcol1 { text-align: right; white-space:nowrap;}
 	        .wfcol2 { }
@@ -27,7 +26,7 @@
 	    
 	    <br />
 	    
-	    <h:panelGrid width="100%" columns="2" columnClasses="col1,col2">
+	    <h:panelGrid width="100%" columns="2" columnClasses="col1">
 	        <rich:panel styleClass="wizard">
 	            <f:facet name="header">
 	                <h:outputText value="#{msgs.newAgr}" />
