chief select menu rock solid (seeeeeeeeee)

--- a/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
@@ -38,7 +38,7 @@
 
 
 	<p:dialog id="chiefDialog" header="#{msgs.newChiefTitle}"
-		widgetVar="w_chiefDialog">
+		widgetVar="w_chiefDialog" modal="true">
 		<h:form>
 
 			<h:panelGrid id="chiefPanel" columns="3"
