--- a/Jama/src/main/webapp/resources/sections/installmentWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWiz.xhtml
@@ -16,7 +16,7 @@
 
 			<p:growl id="growl" sticky="true" showDetail="true" />
 			<input type="hidden" name="cid"
-				value='#{installmentWizardPCB.conversation.id}' />
+				value='#{agreementManagerPCB.conversation.id}' />
 
 			<p:wizard>
 
