refactor messaggi + list non funzionante

--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -13,70 +13,70 @@
 				styleClass="grid">
 
 
-				<h:outputText value="#{msgs.newAgrCapitalBalance}:" />
+				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 				<h:inputText id="atheneumCapitalBalance"
 					value="#{shareTablePCB.shareTable.atheneumCapitalBalance}"
-					label="#{msgs.newAgrCapitalBalance}" required="true" />
+					label="#{msgs.shareTableCapitalBalance}" required="true" />
 				<h:message for="atheneumCapitalBalance" />
 
-				<h:outputText value="#{msgs.newAgrCommonBalance}:" />
+				<h:outputText value="#{msgs.shareTableCommonBalance}:" />
 				<h:inputText id="atheneumCommonBalance"
 					value="#{shareTablePCB.shareTable.atheneumCommonBalance}"
-					label="#{msgs.newAgrCommonBalance}" required="true" />
+					label="#{msgs.shareTableCommonBalance}" required="true" />
 				<h:message for="atheneumCommonBalance" />
 
-				<h:outputText value="#{msgs.newAgrPersonnel}:" />
+				<h:outputText value="#{msgs.shareTablePersonnel}:" />
 				<h:inputText id="personnel"
 					value="#{shareTablePCB.shareTable.personnel}"
-					label="#{msgs.newAgrPersonnel}" required="true" />
+					label="#{msgs.shareTablePersonnel}" required="true" />
 				<h:message for="personnel" />
 
-				<h:outputText value="#{msgs.newAgrStructures}:" />
+				<h:outputText value="#{msgs.shareTableStructures}:" />
 				<h:inputText id="structures"
 					value="#{shareTablePCB.shareTable.structures}"
-					label="#{msgs.newAgrStructures}" required="true" />
+					label="#{msgs.shareTableStructures}" required="true" />
 				<h:message for="structures" />
 
-				<h:outputText value="#{msgs.newAgrGoods}:" />
+				<h:outputText value="#{msgs.shareTableGoods}:" />
 				<h:inputText id="goodsAndServices"
 					value="#{shareTablePCB.shareTable.goodsAndServices}"
-					label="#{msgs.newAgrGoods}" required="true" />
+					label="#{msgs.shareTableGoods}" required="true" />
 				<h:message for="goodsAndServices" />
 
-				<h:outputText value="#{msgs.newAgrTrip}:" />
+				<h:outputText value="#{msgs.shareTableTrip}:" />
 				<h:inputText id="businessTrip"
 					value="#{shareTablePCB.shareTable.businessTrip}"
-					label="#{msgs.newAgrTrip}" required="true" />
+					label="#{msgs.shareTableTrip}" required="true" />
 				<h:message for="businessTrip" />
 
-				<h:outputText value="#{msgs.newAgrConsMaterials}:" />
+				<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 				<h:inputText id="consumerMaterials"
 					value="#{shareTablePCB.shareTable.consumerMaterials}"
-					label="#{msgs.newAgrConsMaterials}" required="true" />
+					label="#{msgs.shareTableConsMaterials}" required="true" />
 				<h:message for="consumerMaterials" />
 
-				<h:outputText value="#{msgs.newAgrInvMaterials}:" />
+				<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 				<h:inputText id="inventoryMaterials"
 					value="#{shareTablePCB.shareTable.inventoryMaterials}"
-					label="#{msgs.newAgrInvMaterials}" required="true" />
+					label="#{msgs.shareTableInvMaterials}" required="true" />
 				<h:message for="inventoryMaterials" />
 
-				<h:outputText value="#{msgs.newAgrRentals}:" />
+				<h:outputText value="#{msgs.shareTableRentals}:" />
 				<h:inputText id="rentals"
 					value="#{shareTablePCB.shareTable.rentals}"
-					label="#{msgs.newAgrRentals}" required="true" />
+					label="#{msgs.shareTableRentals}" required="true" />
 				<h:message for="rentals" />
 
-				<h:outputText value="#{msgs.newAgrContrPersonnel}:" />
+				<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 				<h:inputText id="personnelOnContract"
 					value="#{shareTablePCB.shareTable.personnelOnContract}"
-					label="#{msgs.newAgrContrPersonnel}" required="true" />
+					label="#{msgs.shareTableContrPersonnel}" required="true" />
 				<h:message for="personnelOnContract" />
 
-				<h:outputText value="#{msgs.newAgrOtherCosts}:" />
+				<h:outputText value="#{msgs.shareTableOtherCosts}:" />
 				<h:inputText id="otherCost"
 					value="#{shareTablePCB.shareTable.otherCost}"
-					label="#{msgs.newAgrOtherCosts}" required="true" />
+					label="#{msgs.shareTableOtherCosts}" required="true" />
 				<h:message for="otherCost" />
 				
 				<h:inputHidden value="needed" id="percentsCheck" validator="#{shareTablePCB.validate}" />
