--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -13,13 +13,13 @@
 
 				<p:row>
 					<p:column>
-						<h:outputText value="#{msgs.newAgrTitle}:" />
+						<h:outputText value="#{msgs.agrTitle}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputTextarea id="title" cols="20" rows="4"
 							value="#{agreementWizardPCB.agreement.title}"
-							label="#{msgs.newAgrTitle}" required="true" />
+							label="#{msgs.agrTitle}" required="true" />
 					</p:column>
 
 					<p:column colspan="2">
@@ -30,13 +30,13 @@
 
 				<p:row>
 					<p:column>
-						<h:outputText value="#{msgs.newAgrProtocolNumber}:" />
+						<h:outputText value="#{msgs.protocolNumber}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="protocolNumber"
 							value="#{agreementWizardPCB.agreement.protocolNumber}"
-							label="#{msgs.newAgrProtocolNumber}" required="true">
+							label="#{msgs.protocolNumber}" required="true">
 							<f:convertNumber minIntegerDigits="6" maxIntegerDigits="6"
 								integerOnly="true" />
 						</h:inputText>
@@ -51,7 +51,7 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrDepartment}:" />
+						<h:outputText value="#{msgs.department}:" />
 					</p:column>
 
 					<p:column colspan="3">
@@ -63,13 +63,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrType}:" />
+						<h:outputText value="#{msgs.agrType}:" />
 					</p:column>
 
 					<p:column>
 						<h:selectOneMenu id="type"
 							value="#{agreementWizardPCB.agreement.type}"
-							label="#{msgs.newAgrType}" required="true">
+							label="#{msgs.agrType}" required="true">
 							<f:selectItems value="#{agreementWizPB.agreementTypeItems}" />
 						</h:selectOneMenu>
 					</p:column>
@@ -84,13 +84,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrChief}:" />
+						<h:outputText value="#{msgs.chief}:" />
 					</p:column>
 
 					<p:column>
 						<p:selectOneMenu id="chiefMenu"
 							value="#{agreementWizardPCB.agreement.chief}"
-							label="#{msgs.newAgrChief}" required="true">
+							label="#{msgs.chief}" required="true">
 							<f:selectItems value="#{agreementWizPB.chiefItems}" />
 							<f:converter binding="#{chiefConverter}" />
 						</p:selectOneMenu>
@@ -114,13 +114,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrContact}:" />
+						<h:outputText value="#{msgs.contactPerson}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="contact"
 							value="#{agreementWizardPCB.agreement.contactPerson}"
-							label="#{msgs.newAgrContact}" required="true" />
+							label="#{msgs.contactPerson}" required="true" />
 					</p:column>
 
 
@@ -133,13 +133,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrCompany}:" />
+						<h:outputText value="#{msgs.company}:" />
 					</p:column>
 
 					<p:column>
 						<h:selectOneMenu id="companyMenu"
 							value="#{agreementWizardPCB.agreement.company}"
-							label="#{msgs.newAgrCompany}" required="true">
+							label="#{msgs.company}" required="true">
 							<f:selectItems value="#{agreementWizPB.companyItems}" />
 							<f:converter binding="#{companyConverter}" />
 						</h:selectOneMenu>
@@ -163,13 +163,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrProjectNumber}:" />
+						<h:outputText value="#{msgs.projectNumber}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="projectNumber"
 							value="#{agreementWizardPCB.agreement.CIA_projectNumber}"
-							label="#{msgs.newAgrProjectNumber}" required="true" />
+							label="#{msgs.projectNumber}" required="true" />
 					</p:column>
 
 					<p:column colspan="2">
@@ -181,13 +181,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrInventory}:" />
+						<h:outputText value="#{msgs.agrInventory}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="inventoryNumber"
 							value="#{agreementWizardPCB.agreement.inventoryNumber}"
-							label="#{msgs.newAgrInventory}" required="true" />
+							label="#{msgs.agrInventory}" required="true" />
 					</p:column>
 
 					<p:column colspan="2">
@@ -199,13 +199,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrTaxableAmount}:" />
+						<h:outputText value="#{msgs.taxableAmount}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="taxableAmount"
 							value="#{agreementWizardPCB.agreement.wholeTaxableAmount}"
-							label="#{msgs.newAgrTaxableAmount}" required="true">
+							label="#{msgs.taxableAmount}" required="true">
 							<f:convertNumber />
 							<f:validateDoubleRange minimum="0.0" />
 							<f:ajax render="amount taxAmountError" />
@@ -221,13 +221,13 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrIva}:" />
+						<h:outputText value="#{msgs.iva}:" />
 					</p:column>
 
 					<p:column>
 						<h:inputText id="iva"
 							value="#{agreementWizardPCB.agreement.IVA_amount}"
-							label="#{msgs.newAgrIva}" required="true">
+							label="#{msgs.iva}" required="true">
 							<f:convertNumber />
 							<f:validateDoubleRange minimum="0.0" maximum="100.0" />
 							<f:ajax render="amount ivaError" />
@@ -243,7 +243,7 @@
 				<p:row>
 
 					<p:column>
-						<h:outputText value="#{msgs.newAgrWholeAmount}:" />
+						<h:outputText value="#{msgs.wholeAmount}:" />
 					</p:column>
 
 					<p:column colspan="3">
@@ -261,7 +261,7 @@
 					<p:row>
 
 						<p:column>
-							<h:outputText value="#{msgs.newAgrApproval}:" />
+							<h:outputText value="#{msgs.approvalDate}:" />
 						</p:column>
 
 						<p:column>
@@ -281,7 +281,7 @@
 					<p:row>
 
 						<p:column>
-							<h:outputText value="#{msgs.newAgrBegin}:" />
+							<h:outputText value="#{msgs.beginDate}:" />
 						</p:column>
 
 						<p:column>
@@ -301,7 +301,7 @@
 					<p:row>
 
 						<p:column>
-							<h:outputText value="#{msgs.newAgrEnd}:" />
+							<h:outputText value="#{msgs.deadlineDate}:" />
 						</p:column>
 
 						<p:column>
