--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -15,6 +15,7 @@
 	<h:commandButton value="Crea Convenzione" action="#{agreementManagerPCB.createAgreement}" styleClass="buttons" />
 	<h:button value="Aggiungi Rata"
 		outcome="/resources/sections/installmentWiz" styleClass="buttons" />
+	<h:button value="Lista convenzioni"	outcome="agreementList" styleClass="buttons" />
 	</h:form>
 </h:body>
 
