list improvement (still buggy) + random fixes

--- a/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWiz.xhtml
@@ -28,7 +28,7 @@
 
 			</p:wizard>
 
-			<h:button value="#{msgs.cancel}" outcome="/cancel" immediate="true" />
+			<h:button value="#{msgs.cancel}" outcome="/home" immediate="true" />
 
 
 
