--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -11,7 +11,7 @@
 				styleClass="grid">
 
 
-				<h:outputText value="#{msgs.newAgrCapitalBalance}:" />
+				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 				<br />
 				<br />
 
